--- a/bg.html
+++ b/bg.html
@@ -1,5 +1,4 @@
-<p align="center">
-  <img src="https://png.pngtree.com/thumb_back/fh260/background/20210831/pngtree-grunge-wall-texture-scratched-off-white-background-image_774147.jpg" width="100%" alt="Background Image">
-</p>
+<link rel="stylesheet" href="/path/to/your/styles.css">
+
 
 
